--- a/lectures/lecture_1.html
+++ b/lectures/lecture_1.html
@@ -133,7 +133,7 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" class="quarto-title-block center">
+<section id="title-slide" data-background-iframe="theme/flow-field/index.html" class="quarto-title-block center">
   <h1 class="title">STA1005 - Quantitative Research Methods</h1>
   <p class="subtitle">Lecture 1: Statistics, Research Papers and Me</p>
 
@@ -1566,7 +1566,7 @@ Damien Dupré | DCU Business School
 </ol>
 <div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_b2de926c" data-warn-when="60" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown" id="timer_28d3ada9" data-warn-when="60" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -1659,7 +1659,7 @@ Damien Dupré | DCU Business School
 </table>
 <div class="cell">
 <div class="cell-output-display">
-<div class="countdown" id="timer_39ab77f7" data-warn-when="60" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown" id="timer_61d2d699" data-warn-when="60" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
 <div class="countdown-controls"><button class="countdown-bump-down">−</button><button class="countdown-bump-up">+</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
